--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             </div>
             <button id="newGame" onclick="newGame()">New Game</button>
             <div>
-                <h2>GUEST</h2>
-                <h1 id="scoreGuest">0</h1>
-                <button onclick="add1Guest()">+1</button>
-                <button onclick="add2Guest()">+2</button>
-                <button onclick="add3Guest()">+3</button>
+                <h2>AWAY</h2>
+                <h1 id="scoreAway">0</h1>
+                <button onclick="add1Away()">+1</button>
+                <button onclick="add2Away()">+2</button>
+                <button onclick="add3Away()">+3</button>
             </div>
         </div>
         <script src="index.js"></script>
