--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="index.css">
+        <title>Basketball Scoreboard</title>
     </head>
     <body>
         <div class="container">
