JS Functions Update
Updated Functions in JS file, changed file names and used Prettier

--- a/index.html
+++ b/index.html
@@ -1,29 +1,27 @@
 <html>
-
-<head>
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <link rel="stylesheet" href="style.css" />
     <title>Basketball Scoreboard</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <div>
-            <h2>HOME</h2>
-            <h1 id="scoreHome">0</h1>
-            <button onclick="add1Home()">+1</button>
-            <button onclick="add2Home()">+2</button>
-            <button onclick="add3Home()">+3</button>
-        </div>
-        <button id="newGame" onclick="newGame()">New Game</button>
-        <div>
-            <h2>AWAY</h2>
-            <h1 id="scoreAway">0</h1>
-            <button onclick="add1Away()">+1</button>
-            <button onclick="add2Away()">+2</button>
-            <button onclick="add3Away()">+3</button>
-        </div>
+      <div>
+        <h2>HOME</h2>
+        <h1 id="scoreHome">0</h1>
+        <button onclick="add1Home()">+1</button>
+        <button onclick="add2Home()">+2</button>
+        <button onclick="add3Home()">+3</button>
+      </div>
+      <button id="newGame" onclick="newGame()">New Game</button>
+      <div>
+        <h2>AWAY</h2>
+        <h1 id="scoreAway">0</h1>
+        <button onclick="add1Away()">+1</button>
+        <button onclick="add2Away()">+2</button>
+        <button onclick="add3Away()">+3</button>
+      </div>
     </div>
-    <script src="index.js"></script>
-</body>
-
+    <script src="script.js"></script>
+  </body>
 </html>
